Fix bug with menu-closing on mobile-devices

--- a/src/main/resources/static/css/_form.scss
+++ b/src/main/resources/static/css/_form.scss
@@ -75,5 +75,5 @@ section#form {
 }
 
 #buttons {
-  margin-top: 3.6rem;
+  margin-top: 1.8rem;
 }
