--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -280,7 +280,7 @@ section#form form label {
 }
 
 #buttons {
-  margin-top: 3.6rem;
+  margin-top: 1.8rem;
 }
 
 header {
